# Rust-Memory-Analyzer

./: Cargo.toml  LICENSE  README.md  build.rs
extras/MemoryTest/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  MemoryTest.sln
extras/MemoryTest/Assets/: Test.cs
extras/MemoryTest/Assets/Scenes/: SampleScene.unity
extras/MemoryTest/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
src/: app.rs  main.rs  utils.rs
src/classes/: c_console.rs  c_console_row.rs  c_memory_region.rs  c_opened_process.rs  c_process_row.rs  c_processes.rs  c_scan_result_row.rs  c_select_process_window.rs  e_message_type.rs  e_value_type.rs  mod.rs
src/screens/: mod.rs  process_select_screen.rs
